iod/src/cwlang.output
Terminals unused in grammar

   DEFAULTS
   NUMBER
   SEPARATOR
   OEXPR
   EEXPR
   OBRACE
   EBRACE
   QUOTE
   SQUOTE
   DEFINE
   COLLECT
   TEST
   SPAWN
   RUN
   TRIM
   LINE
   MATCH
   INTERPRET
   BEGINPROP
   ENDPROP
   CONCAT
   GROUP
   LENGTH
   CONSTRAINT
   IGNORE
   UMINUS
   '~'


State 0 conflicts: 4 shift/reduce
State 5 conflicts: 5 shift/reduce
State 31 conflicts: 3 shift/reduce
State 75 conflicts: 4 shift/reduce
State 126 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce
State 155 conflicts: 16 shift/reduce
State 205 conflicts: 1 shift/reduce
State 206 conflicts: 1 shift/reduce
State 214 conflicts: 1 shift/reduce
State 220 conflicts: 1 shift/reduce
State 236 conflicts: 1 shift/reduce
State 263 conflicts: 1 shift/reduce
State 264 conflicts: 1 shift/reduce
State 265 conflicts: 1 shift/reduce
State 266 conflicts: 1 shift/reduce
State 267 conflicts: 1 shift/reduce
State 268 conflicts: 1 shift/reduce
State 275 conflicts: 1 shift/reduce
State 276 conflicts: 1 shift/reduce
State 277 conflicts: 1 shift/reduce
State 278 conflicts: 1 shift/reduce
State 279 conflicts: 1 shift/reduce
State 280 conflicts: 1 shift/reduce
State 281 conflicts: 1 shift/reduce
State 282 conflicts: 1 shift/reduce
State 343 conflicts: 1 shift/reduce
State 353 conflicts: 1 shift/reduce
State 378 conflicts: 1 shift/reduce
State 379 conflicts: 1 shift/reduce
State 380 conflicts: 1 shift/reduce
State 381 conflicts: 1 shift/reduce
State 382 conflicts: 1 shift/reduce
State 419 conflicts: 1 shift/reduce
State 425 conflicts: 1 shift/reduce
State 433 conflicts: 1 shift/reduce
State 434 conflicts: 1 shift/reduce
State 438 conflicts: 1 shift/reduce
State 445 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_section
    2        | program program_section

    3 program_section: %empty
    4                | module_block
    5                | module_def
    6                | machine_definition
    7                | machine_instantiation
    8                | route_declaration
    9                | channel_definition
   10                | interface_definition
   11                | error ';'
   12                | error '}'

   13 global_references: global_reference
   14                  | global_references COMMA global_reference

   15 global_reference: SYMBOL

   16 option_settings: option_setting
   17                | option_settings COMMA option_setting

   18 option_setting: SYMBOL value

   19 route_declaration: ROUTE STRINGVAL TO SYMBOL ';'

   20 machine_definition: definition_header '{' definition_body '}'

   21 interface_definition: interface_defn_header '{' interface_defn_body '}'

   22 interface_defn_header: SYMBOL INTERFACE

   23 interface_defn_body: interface_defn_section
   24                    | interface_defn_body interface_defn_section

   25 interface_defn_section: %empty
   26                       | OPTION name_list ';'
   27                       | COMMAND name_list ';'
   28                       | state_definition ';'

   29 channel_definition: chn_definition_header '{' chn_definition_body '}'

   30 chn_definition_header: SYMBOL CHANNEL
   31                      | SYMBOL CHANNEL EXTENDS SYMBOL

   32 chn_definition_body: chn_definition_section
   33                    | chn_definition_body chn_definition_section

   34 chn_definition_section: KEY STRINGVAL ';'
   35                       | IDENTIFIER STRINGVAL ';'
   36                       | VERSION STRINGVAL ';'
   37                       | SHARES name_list ';'
   38                       | MONITORS name_list ';'
   39                       | IGNORES PATTERN ';'
   40                       | MONITORS PATTERN ';'
   41                       | MONITORS MACHINES WITH NAME MATCHING PATTERN ';'
   42                       | MONITORS MACHINES WHERE SYMBOL EQ basic_value ';'
   43                       | MONITORS MACHINES WITH PROPERTY SYMBOL ';'
   44                       | MONITORS MACHINES WITH EXPORTS ';'
   45                       | MONITORS SYMBOL EQ basic_value ';'
   46                       | UPDATES machine_list ';'
   47                       | SENDS name_list ';'
   48                       | RECEIVES name_list ';'
   49                       | OPTION chn_option_settings ';'
   50                       | THROTTLE INTEGER ';'

   51 machine_list: SYMBOL
   52             | SYMBOL SYMBOL
   53             | machine_list COMMA SYMBOL
   54             | machine_list COMMA SYMBOL SYMBOL

   55 basic_value: INTEGER
   56            | STRINGVAL
   57            | SYMBOL

   58 chn_option_settings: chn_option_setting
   59                    | chn_option_setting COMMA chn_option_setting

   60 chn_option_setting: SYMBOL value

   61 definition_header: SYMBOL STATEMACHINE parameters
   62                  | SYMBOL STATEMACHINE property_block parameters

   63 definition_body: definition_section
   64                | definition_body definition_section

   65 definition_section: GLOBAL global_references ';'
   66                   | OPTION option_settings ';'
   67                   | export_clause
   68                   | local_machine_instantiation
   69                   | command
   70                   | stable_state
   71                   | transitory_state
   72                   | transition_entry
   73                   | plugin_entry

   74 export_clause: EXPORT access_type size_type name_list ';'
   75              | EXPORT STATES name_list ';'
   76              | EXPORT COMMANDS name_list ';'

   77 access_type: READONLY
   78            | READWRITE

   79 size_type: WORD
   80          | DOUBLEWORD
   81          | STRINGTYPE INTEGER

   82 machine_instantiation: instantiation ';'

   83 local_machine_instantiation: local_instantiation ';'

   84 stable_state: state_definition ';'
   85             | stable_state_definition ';'

   86 transitory_state: SYMBOL DURING SYMBOL action
   87                 | SYMBOL DURING SYMBOL property_block action

   88 state_definition: SYMBOL STATE
   89                 | SYMBOL DEFAULT
   90                 | SYMBOL INITSTATE

   91 stable_state_definition: SYMBOL WHEN predicate
   92                        | stable_state_definition COMMA state_subcondition

   93 state_subcondition: EXECUTE SYMBOL WHEN predicate
   94                   | TAG SYMBOL WHEN predicate

   95 predicate: expression
   96          | predicate AND predicate
   97          | predicate OR predicate

   98 expression: value
   99           | '(' value ')'
  100           | '(' predicate ')'
  101           | NOT expression
  102           | expression GE expression
  103           | expression LE expression
  104           | expression GT expression
  105           | expression LT expression
  106           | expression EQ expression
  107           | expression NE expression
  108           | expression NOT GE expression
  109           | expression NOT LE expression
  110           | expression NOT GT expression
  111           | expression NOT LT expression
  112           | expression NOT EQ expression
  113           | expression '+' expression
  114           | expression '-' expression
  115           | expression '*' expression
  116           | expression '/' expression
  117           | expression '%' expression
  118           | expression '&' expression
  119           | expression '|' expression
  120           | expression '^' expression
  121           | '!' expression
  122           | '-' expression
  123           | expression MATCHES PATTERN

  124 value: INTEGER
  125      | STRINGVAL
  126      | SYMBOL
  127      | SYMBOL INCLUDES value
  128      | ANY SYMBOL ARE SYMBOL
  129      | ALL SYMBOL ARE SYMBOL
  130      | SIZE OF SYMBOL
  131      | COUNT SYMBOL FROM SYMBOL
  132      | BITSET FROM ENTRIES OF SYMBOL WITH STATES SYMBOL
  133      | BITSET FROM SYMBOL
  134      | BITSET FROM SYMBOL WITH STATES SYMBOL
  135      | SYMBOL ENABLED
  136      | SYMBOL DISABLED
  137      | COMMON BETWEEN SYMBOL AND SYMBOL
  138      | DIFFERENCE BETWEEN SYMBOL AND SYMBOL
  139      | COMBINATION OF SYMBOL AND SYMBOL
  140      | SYMBOL BECOMES value
  141      | TAKE LAST FROM SYMBOL
  142      | TAKE FIRST FROM SYMBOL
  143      | TAKE ITEM SYMBOL FROM SYMBOL
  144      | TAKE ITEM value FROM SYMBOL
  145      | ITEM SYMBOL OF SYMBOL
  146      | ITEM value OF SYMBOL
  147      | LAST OF SYMBOL
  148      | FIRST OF SYMBOL

  149 command: enter_command
  150        | leave_command
  151        | receive_command
  152        | basic_command

  153 basic_command: COMMAND SYMBOL action
  154              | COMMAND SYMBOL WITHIN SYMBOL action
  155              | COMMAND SYMBOL property_block action

  156 enter_command: ENTER SYMBOL action

  157 leave_command: LEAVE SYMBOL action

  158 receive_command: RECEIVE SYMBOL action
  159                | RECEIVE SYMBOL WITHIN SYMBOL action
  160                | RECEIVE SYMBOL FROM SYMBOL action

  161 action_list: action
  162            | action_list ';' action
  163            | error ';'
  164            | error '}'

  165 action: SET SYMBOL TO value
  166       | WAIT value
  167       | LOCK SYMBOL
  168       | UNLOCK SYMBOL
  169       | ENABLE SYMBOL
  170       | ENABLE SYMBOL WHERE SYMBOL EQ value
  171       | RESUME SYMBOL
  172       | RESUME SYMBOL WHERE SYMBOL EQ value
  173       | RESUME SYMBOL AT SYMBOL
  174       | DISABLE SYMBOL
  175       | DISABLE SYMBOL WHERE SYMBOL EQ value
  176       | SHUTDOWN
  177       | WAITFOR SYMBOL EQ SYMBOL
  178       | INC SYMBOL
  179       | INC SYMBOL BY value
  180       | DEC SYMBOL BY value
  181       | SYMBOL BECOMES expression
  182       | SET SYMBOL TO PROPERTY SYMBOL
  183       | CALL SYMBOL ON SYMBOL
  184       | SEND SYMBOL TO SYMBOL
  185       | SEND STRINGVAL TO SYMBOL
  186       | SYMBOL BECOMES COPY PATTERN FROM SYMBOL
  187       | SYMBOL BECOMES COPY ALL PATTERN FROM SYMBOL
  188       | SYMBOL BECOMES EXTRACT PATTERN FROM SYMBOL
  189       | SYMBOL BECOMES EXTRACT ALL PATTERN FROM SYMBOL
  190       | CREATE SYMBOL WITH COUNT SYMBOL IN SYMBOL
  191       | CREATE SYMBOL WITH COPY INTEGER FROM SYMBOL
  192       | CREATE SYMBOL WITH TAKE INTEGER FROM SYMBOL
  193       | INCLUDE SYMBOL IN SYMBOL
  194       | INCLUDE value IN SYMBOL
  195       | PUSH SYMBOL TO SYMBOL
  196       | PUSH value TO SYMBOL
  197       | CLEAR SYMBOL
  198       | ASSIGN SYMBOL TO SYMBOL
  199       | SET ENTRIES OF SYMBOL FROM BITSET SYMBOL
  200       | REPLACE PATTERN IN SYMBOL WITH STRINGVAL
  201       | REPLACE ALL PATTERN IN SYMBOL WITH STRINGVAL
  202       | COPY PROPERTIES FROM SYMBOL TO SYMBOL
  203       | COPY COMMON BETWEEN SYMBOL AND SYMBOL TO SYMBOL USING SYMBOL
  204       | COPY COMMON BETWEEN SYMBOL AND SYMBOL TO SYMBOL
  205       | COPY ALL FROM SYMBOL TO SYMBOL SELECT USING SYMBOL WHERE predicate
  206       | COPY value FROM SYMBOL TO SYMBOL SELECT USING SYMBOL WHERE predicate
  207       | MOVE ALL FROM SYMBOL TO SYMBOL SELECT USING SYMBOL WHERE predicate
  208       | MOVE value FROM SYMBOL TO SYMBOL SELECT USING SYMBOL WHERE predicate
  209       | COPY DIFFERENCE BETWEEN SYMBOL AND SYMBOL TO SYMBOL
  210       | COPY DIFFERENCE BETWEEN SYMBOL AND SYMBOL TO SYMBOL USING SYMBOL
  211       | COPY ALL IN SYMBOL OR SYMBOL TO SYMBOL
  212       | COPY ALL IN SYMBOL OR SYMBOL TO SYMBOL USING SYMBOL
  213       | COPY ITEM value FROM SYMBOL TO SYMBOL
  214       | COPY ITEMS value TO value OF SYMBOL TO SYMBOL
  215       | COPY ALL FROM SYMBOL TO SYMBOL
  216       | COPY value FROM SYMBOL TO SYMBOL
  217       | COPY ALL FROM SYMBOL TO SYMBOL WHERE predicate
  218       | COPY value FROM SYMBOL TO SYMBOL WHERE predicate
  219       | MOVE ALL FROM SYMBOL TO SYMBOL
  220       | MOVE value FROM SYMBOL TO SYMBOL
  221       | MOVE ALL FROM SYMBOL TO SYMBOL WHERE predicate
  222       | MOVE value FROM SYMBOL TO SYMBOL WHERE predicate
  223       | SORT SYMBOL
  224       | SORT SYMBOL BY PROPERTY SYMBOL
  225       | LOG expression
  226       | IF_ '(' predicate ')' '{' action_list '}'
  227       | IF_ '(' predicate ')' '{' action_list '}' ELSE '{' action_list '}'
  228       | '{' action_list '}'
  229       | %empty

  230 local_instantiation: SYMBOL SYMBOL parameters
  231                    | SYMBOL SYMBOL property_block parameters
  232                    | SYMBOL CONDITION expression

  233 instantiation: SYMBOL SYMBOL parameters
  234              | SYMBOL SYMBOL property_block parameters

  235 plugin_entry: PLUGIN STRINGVAL ';'

  236 module_block: MODULES '{' module_instances '}'

  237 module_instances: parameters ';'
  238                 | module_instances parameters ';'

  239 parameters: parameter
  240           | parameters COMMA parameter

  241 parameter: value
  242          | SYMBOL property_block
  243          | %empty

  244 module_def: SYMBOL MODULE parameters ';'
  245           | SYMBOL MODULE property_block parameters ';'
  246           | SYMBOL FLAG ';'
  247           | SYMBOL FLAG property_block ';'
  248           | SYMBOL CONDITION expression ';'

  249 property_block: '(' properties ')'

  250 properties: property
  251           | properties COMMA property

  252 property: SYMBOL PROPSEP value
  253         | SYMBOL

  254 name_list: transition_state
  255          | name_list COMMA SYMBOL

  256 transition_state: SYMBOL
  257                 | ANY

  258 transition_entry: transition ';'

  259 transition: TRANSITION name_list TO transition_state USING SYMBOL
  260           | TRANSITION name_list TO transition_state ON SYMBOL
  261           | TRANSITION name_list TO transition_state USING SYMBOL REQUIRES predicate
  262           | TRANSITION name_list TO transition_state ON SYMBOL REQUIRES predicate
  263           | TRANSITION name_list TO transition_state REQUIRES predicate


Terminals, with rules where they appear

$end (0) 0
'!' (33) 121
'%' (37) 117
'&' (38) 118
'(' (40) 99 100 226 227 249
')' (41) 99 100 226 227 249
'*' (42) 115
'+' (43) 113
'-' (45) 114 122
'/' (47) 116
';' (59) 11 19 26 27 28 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 65 66 74 75 76 82 83 84 85 162 163 235 237 238 244 245 246
    247 248 258
'^' (94) 120
'{' (123) 20 21 29 226 227 228 236
'|' (124) 119
'}' (125) 12 20 21 29 164 226 227 228 236
'~' (126)
error (256) 11 12 163 164
MODULES (258) 236
MODULE (259) 244 245
DEFAULTS (260)
DEFAULT (261) 89
STATE (262) 88
ENTER (263) 156
NUMBER (264)
SEPARATOR (265)
OEXPR (266)
EEXPR (267)
OBRACE (268)
EBRACE (269)
QUOTE (270)
LE (271) 103 109
LT (272) 105 111
GE (273) 102 108
GT (274) 104 110
NE (275) 107
EQ (276) 42 45 106 112 170 172 175 177
NOT (277) 101 108 109 110 111 112
SET (278) 165 182 199
AND (279) 96 137 138 139 203 204 209 210
OR (280) 97 211 212
SQUOTE (281)
LOG (282) 225
FLAG (283) 246 247
PROPERTY (284) 43 182 224
DEFINE (285)
COLLECT (286)
FROM (287) 131 132 133 134 141 142 143 144 160 186 187 188 189 191
    192 199 202 205 206 207 208 213 215 216 217 218 219 220 221 222
TEST (288)
EXECUTE (289) 93
SPAWN (290)
RUN (291)
CALL (292) 183
TRIM (293)
LINE (294)
OF (295) 130 132 139 145 146 147 148 199 214
USING (296) 203 205 206 207 208 210 212 259 261
MATCH (297)
IN (298) 190 193 194 200 201 211 212
REPLACE (299) 200 201
WITH (300) 41 43 44 132 134 190 191 192 200 201
INTERPRET (301)
COMMA (302) 14 17 53 54 59 92 240 251 255
BEGINPROP (303)
ENDPROP (304)
PROPSEP (305) 252
STATEMACHINE (306) 61 62
WHEN (307) 91 93 94
TO (308) 19 165 182 184 185 195 196 198 202 203 204 205 206 207 208
    209 210 211 212 213 214 215 216 217 218 219 220 221 222 259 260
    261 262 263
RECEIVE (309) 158 159 160
DURING (310) 86 87
WAIT (311) 166
WAITFOR (312) 177
TRANSITION (313) 259 260 261 262 263
TAG (314) 94
INC (315) 178 179
DEC (316) 180
BY (317) 179 180 224
CONCAT (318)
SEND (319) 184 185
CONDITION (320) 232 248
INITSTATE (321) 90
IF_ (322) 226 227
ELSE (323) 227
ENABLE (324) 169 170
DISABLE (325) 174 175
BECOMES (326) 140 181 186 187 188 189
GLOBAL (327) 65
GROUP (328)
OPTION (329) 26 49 66
LOCK (330) 167
UNLOCK (331) 168
ON (332) 183 260 262
RESUME (333) 171 172 173
AT (334) 173
SHUTDOWN (335) 176
COMMAND (336) 27 153 154 155
EXPORT (337) 74 75 76
READONLY (338) 77
READWRITE (339) 78
WORD (340) 79
DOUBLEWORD (341) 80
STRINGTYPE (342) 81
STATES (343) 75 132 134
MATCHES (344) 123
COMMANDS (345) 76
COPY (346) 186 187 191 202 203 204 205 206 209 210 211 212 213 214
    215 216 217 218
EXTRACT (347) 188 189
ALL (348) 129 187 189 201 205 207 211 212 215 217 219 221
REQUIRES (349) 261 262 263
WHERE (350) 42 170 172 175 205 206 207 208 217 218 221 222
ROUTE (351) 19
ANY (352) 128 257
ARE (353) 128 129
COUNT (354) 131 190
SELECT (355) 205 206 207 208
TAKE (356) 141 142 143 144 192
LENGTH (357)
INCLUDES (358) 127
INCLUDE (359) 193 194
CREATE (360) 190 191 192
BITSET (361) 132 133 134 199
PROPERTIES (362) 202
ENTRIES (363) 132 199
SORT (364) 223 224
ENABLED (365) 135
DISABLED (366) 136
SIZE (367) 130
ITEM (368) 143 144 145 146 213
FIRST (369) 142 148
LAST (370) 141 147
COMMON (371) 137 203 204
BETWEEN (372) 137 138 203 204 209 210
DIFFERENCE (373) 138 209 210
COMBINATION (374) 139
CLEAR (375) 197
LEAVE (376) 157
ASSIGN (377) 198
WITHIN (378) 154 159
PUSH (379) 195 196
MOVE (380) 207 208 219 220 221 222
ITEMS (381) 214
PLUGIN (382) 235
CHANNEL (383) 30 31
IDENTIFIER (384) 35
VERSION (385) 36
SHARES (386) 37
MONITORS (387) 38 40 41 42 43 44 45
UPDATES (388) 46
SENDS (389) 47
RECEIVES (390) 48
INTERFACE (391) 22
EXTENDS (392) 31
KEY (393) 34
MACHINES (394) 41 42 43 44
MATCHING (395) 41
NAME (396) 41
EXPORTS (397) 44
CONSTRAINT (398)
IGNORE (399)
IGNORES (400) 39
THROTTLE (401) 50
INTEGER (402) 50 55 81 124 191 192
SYMBOL (403) 15 18 19 22 30 31 42 43 45 51 52 53 54 57 60 61 62 86
    87 88 89 90 91 93 94 126 127 128 129 130 131 132 133 134 135 136
    137 138 139 140 141 142 143 144 145 146 147 148 153 154 155 156
    157 158 159 160 165 167 168 169 170 171 172 173 174 175 177 178
    179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194
    195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210
    211 212 213 214 215 216 217 218 219 220 221 222 223 224 230 231
    232 233 234 242 244 245 246 247 248 252 253 255 256 259 260 261
    262
STRINGVAL (404) 19 34 35 36 56 125 185 200 201 235
PATTERN (405) 39 40 41 123 186 187 188 189 200 201
UMINUS (406)
IFX (407)
IFELSE (408)


Nonterminals, with rules where they appear

$accept (169)
    on left: 0
program (170)
    on left: 1 2, on right: 0 2
program_section (171)
    on left: 3 4 5 6 7 8 9 10 11 12, on right: 1 2
global_references (172)
    on left: 13 14, on right: 14 65
global_reference (173)
    on left: 15, on right: 13 14
option_settings (174)
    on left: 16 17, on right: 17 66
option_setting (175)
    on left: 18, on right: 16 17
route_declaration (176)
    on left: 19, on right: 8
machine_definition (177)
    on left: 20, on right: 6
interface_definition (178)
    on left: 21, on right: 10
interface_defn_header (179)
    on left: 22, on right: 21
interface_defn_body (180)
    on left: 23 24, on right: 21 24
interface_defn_section (181)
    on left: 25 26 27 28, on right: 23 24
channel_definition (182)
    on left: 29, on right: 9
chn_definition_header (183)
    on left: 30 31, on right: 29
chn_definition_body (184)
    on left: 32 33, on right: 29 33
chn_definition_section (185)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50, on right:
    32 33
machine_list (186)
    on left: 51 52 53 54, on right: 46 53 54
basic_value (187)
    on left: 55 56 57, on right: 42 45
chn_option_settings (188)
    on left: 58 59, on right: 49
chn_option_setting (189)
    on left: 60, on right: 58 59
definition_header (190)
    on left: 61 62, on right: 20
definition_body (191)
    on left: 63 64, on right: 20 64
definition_section (192)
    on left: 65 66 67 68 69 70 71 72 73, on right: 63 64
export_clause (193)
    on left: 74 75 76, on right: 67
access_type (194)
    on left: 77 78, on right: 74
size_type (195)
    on left: 79 80 81, on right: 74
machine_instantiation (196)
    on left: 82, on right: 7
local_machine_instantiation (197)
    on left: 83, on right: 68
stable_state (198)
    on left: 84 85, on right: 70
transitory_state (199)
    on left: 86 87, on right: 71
state_definition (200)
    on left: 88 89 90, on right: 28 84
stable_state_definition (201)
    on left: 91 92, on right: 85 92
state_subcondition (202)
    on left: 93 94, on right: 92
predicate (203)
    on left: 95 96 97, on right: 91 93 94 96 97 100 205 206 207 208
    217 218 221 222 226 227 261 262 263
expression (204)
    on left: 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    112 113 114 115 116 117 118 119 120 121 122 123, on right: 95 101
    102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117
    118 119 120 121 122 123 181 225 232 248
value (205)
    on left: 124 125 126 127 128 129 130 131 132 133 134 135 136 137
    138 139 140 141 142 143 144 145 146 147 148, on right: 18 60 98
    99 127 140 144 146 165 166 170 172 175 179 180 194 196 206 208
    213 214 216 218 220 222 241 252
command (206)
    on left: 149 150 151 152, on right: 69
basic_command (207)
    on left: 153 154 155, on right: 152
enter_command (208)
    on left: 156, on right: 149
leave_command (209)
    on left: 157, on right: 150
receive_command (210)
    on left: 158 159 160, on right: 151
action_list (211)
    on left: 161 162 163 164, on right: 162 226 227 228
action (212)
    on left: 165 166 167 168 169 170 171 172 173 174 175 176 177 178
    179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194
    195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210
    211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226
    227 228 229, on right: 86 87 153 154 155 156 157 158 159 160 161
    162
local_instantiation (213)
    on left: 230 231 232, on right: 83
instantiation (214)
    on left: 233 234, on right: 82
plugin_entry (215)
    on left: 235, on right: 73
module_block (216)
    on left: 236, on right: 4
module_instances (217)
    on left: 237 238, on right: 236 238
parameters (218)
    on left: 239 240, on right: 61 62 230 231 233 234 237 238 240 244
    245
parameter (219)
    on left: 241 242 243, on right: 239 240
module_def (220)
    on left: 244 245 246 247 248, on right: 5
property_block (221)
    on left: 249, on right: 62 87 155 231 234 242 245 247
properties (222)
    on left: 250 251, on right: 249 251
property (223)
    on left: 252 253, on right: 250 251
name_list (224)
    on left: 254 255, on right: 26 27 37 38 47 48 74 75 76 255 259
    260 261 262 263
transition_state (225)
    on left: 256 257, on right: 254 259 260 261 262 263
transition_entry (226)
    on left: 258, on right: 72
transition (227)
    on left: 259 260 261 262 263, on right: 258


State 0

    0 $accept: . program $end

    error    shift, and go to state 1
    MODULES  shift, and go to state 2
    ROUTE    shift, and go to state 3
    SYMBOL   shift, and go to state 4

    $end     reduce using rule 3 (program_section)
    error    [reduce using rule 3 (program_section)]
    MODULES  [reduce using rule 3 (program_section)]
    ROUTE    [reduce using rule 3 (program_section)]
    SYMBOL   [reduce using rule 3 (program_section)]

    program                go to state 5
    program_section        go to state 6
    route_declaration      go to state 7
    machine_definition     go to state 8
    interface_definition   go to state 9
    interface_defn_header  go to state 10
    channel_definition     go to state 11
    chn_definition_header  go to state 12
    definition_header      go to state 13
    machine_instantiation  go to state 14
    instantiation          go to state 15
    module_block           go to state 16
    module_def             go to state 17


State 1

   11 program_section: error . ';'
   12                | error . '}'

    ';'  shift, and go to state 18
    '}'  shift, and go to state 19


State 2

  236 module_block: MODULES . '{' module_instances '}'

    '{'  shift, and go to state 20


State 3

   19 route_declaration: ROUTE . STRINGVAL TO SYMBOL ';'

    STRINGVAL  shift, and go to state 21


State 4

   22 interface_defn_header: SYMBOL . INTERFACE
   30 chn_definition_header: SYMBOL . CHANNEL
   31                      | SYMBOL . CHANNEL EXTENDS SYMBOL
   61 definition_header: SYMBOL . STATEMACHINE parameters
   62                  | SYMBOL . STATEMACHINE property_block parameters
  233 instantiation: SYMBOL . SYMBOL parameters
  234              | SYMBOL . SYMBOL property_block parameters
  244 module_def: SYMBOL . MODULE parameters ';'
  245           | SYMBOL . MODULE property_block parameters ';'
  246           | SYMBOL . FLAG ';'
  247           | SYMBOL . FLAG property_block ';'
  248           | SYMBOL . CONDITION expression ';'

    MODULE        shift, and go to state 22
    FLAG          shift, and go to state 23
    STATEMACHINE  shift, and go to state 24
    CONDITION     shift, and go to state 25
    CHANNEL       shift, and go to state 26
    INTERFACE     shift, and go to state 27
    SYMBOL        shift, and go to state 28


State 5

    0 $accept: program . $end
    2 program: program . program_section

    $end     shift, and go to state 29
    error    shift, and go to state 1
    MODULES  shift, and go to state 2
    ROUTE    shift, and go to state 3
    SYMBOL   shift, and go to state 4

    $end     [reduce using rule 3 (program_section)]
    error    [reduce using rule 3 (program_section)]
    MODULES  [reduce using rule 3 (program_section)]
    ROUTE    [reduce using rule 3 (program_section)]
    SYMBOL   [reduce using rule 3 (program_section)]

    program_section        go to state 30
    route_declaration      go to state 7
    machine_definition     go to state 8
    interface_definition   go to state 9
    interface_defn_header  go to state 10
    channel_definition     go to state 11
    chn_definition_header  go to state 12
    definition_header      go to state 13
    machine_instantiation  go to state 14
    instantiation          go to state 15
    module_block           go to state 16
    module_def             go to state 17


State 6

    1 program: program_section .

    $default  reduce using rule 1 (program)


State 7

    8 program_section: route_declaration .

    $default  reduce using rule 8 (program_section)


State 8

    6 program_section: machine_definition .

    $default  reduce using rule 6 (program_section)


State 9

   10 program_section: interface_definition .

    $default  reduce using rule 10 (program_section)


State 10

   21 interface_definition: interface_defn_header . '{' interface_defn_body '}'

    '{'  shift, and go to state 31


State 11

    9 program_section: channel_definition .

    $default  reduce using rule 9 (program_section)


State 12

   29 channel_definition: chn_definition_header . '{' chn_definition_body '}'

    '{'  shift, and go to state 32


State 13

   20 machine_definition: definition_header . '{' definition_body '}'

    '{'  shift, and go to state 33


State 14

    7 program_section: machine_instantiation .

    $default  reduce using rule 7 (program_section)


State 15

   82 machine_instantiation: instantiation . ';'

    ';'  shift, and go to state 34


State 16

    4 program_section: module_block .

    $default  reduce using rule 4 (program_section)


State 17

    5 program_section: module_def .

    $default  reduce using rule 5 (program_section)


State 18

   11 program_section: error ';' .

    $default  reduce using rule 11 (program_section)


State 19

   12 program_section: error '}' .

    $default  reduce using rule 12 (program_section)


State 20

  236 module_block: MODULES '{' . module_instances '}'

    ALL          shift, and go to state 35
    ANY          shift, and go to state 36
    COUNT        shift, and go to state 37
    TAKE         shift, and go to state 38
    BITSET       shift, and go to state 39
    SIZE         shift, and go to state 40
    ITEM         shift, and go to state 41
    FIRST        shift, and go to state 42
    LAST         shift, and go to state 43
    COMMON       shift, and go to state 44
    DIFFERENCE   shift, and go to state 45
    COMBINATION  shift, and go to state 46
    INTEGER      shift, and go to state 47
    SYMBOL       shift, and go to state 48
    STRINGVAL    shift, and go to state 49

    $default  reduce using rule 243 (parameter)

    value             go to state 50
    module_instances  go to state 51
    parameters        go to state 52
    parameter         go to state 53


State 21

   19 route_declaration: ROUTE STRINGVAL . TO SYMBOL ';'

    TO  shift, and go to state 54


State 22

  244 module_def: SYMBOL MODULE . parameters ';'
  245           | SYMBOL MODULE . property_block parameters ';'

    ALL          shift, and go to state 35
    ANY          shift, and go to state 36
    COUNT        shift, and go to state 37
    TAKE         shift, and go to state 38
    BITSET       shift, and go to state 39
    SIZE         shift, and go to state 40
    ITEM         shift, and go to state 41
    FIRST        shift, and go to state 42
    LAST         shift, and go to state 43
    COMMON       shift, and go to state 44
    DIFFERENCE   shift, and go to state 45
    COMBINATION  shift, and go to state 46
    INTEGER      shift, and go to state 47
    SYMBOL       shift, and go to state 48
    STRINGVAL    shift, and go to state 49
    '('          shift, and go to state 55

    $default  reduce using rule 243 (parameter)

    value           go to state 50
    parameters      go to state 56
    parameter       go to state 53
    property_block  go to state 57


State 23

  246 module_def: SYMBOL FLAG . ';'
  247           | SYMBOL FLAG . property_block ';'

    ';'  shift, and go to state 58
    '('  shift, and go to state 55

    property_block  go to state 59


State 24

   61 definition_header: SYMBOL STATEMACHINE . parameters
   62                  | SYMBOL STATEMACHINE . property_block parameters

    ALL          shift, and go to state 35
    ANY          shift, and go to state 36
    COUNT        shift, and go to state 37
    TAKE         shift, and go to state 38
    BITSET       shift, and go to state 39
    SIZE         shift, and go to state 40
    ITEM         shift, and go to state 41
    FIRST        shift, and go to state 42
    LAST         shift, and go to state 43
    COMMON       shift, and go to state 44
    DIFFERENCE   shift, and go to state 45
    COMBINATION  shift, and go to state 46
    INTEGER      shift, and go to state 47
    SYMBOL       shift, and go to state 48
    STRINGVAL    shift, and go to state 49
    '('          shift, and go to state 55

    $default  reduce using rule 243 (parameter)

    value           go to state 50
    parameters      go to state 60
    parameter       go to state 53
    property_block  go to state 61


State 25

  248 module_def: SYMBOL CONDITION . expression ';'

    NOT          shift, and go to state 62
    ALL          shift, and go to state 35
    ANY          shift, and go to state 36
    COUNT        shift, and go to state 37
    TAKE         shift, and go to state 38
    BITSET       shift, and go to state 39
    SIZE         shift, and go to state 40
    ITEM         shift, and go to state 41
    FIRST        shift, and go to state 42
    LAST         shift, and go to state 43
    COMMON       shift, and go to state 44
    DIFFERENCE   shift, and go to state 45
    COMBINATION  shift, and go to state 46
    INTEGER      shift, and go to state 47
    SYMBOL       shift, and go to state 63
    STRINGVAL    shift, and go to state 49
    '-'          shift, and go to state 64
    '('          shift, and go to state 65
    '!'          shift, and go to state 66

    expression  go to state 67
    value       go to state 68


State 26

   30 chn_definition_header: SYMBOL CHANNEL .
   31                      | SYMBOL CHANNEL . EXTENDS SYMBOL

    EXTENDS  shift, and go to state 69

    $default  reduce using rule 30 (chn_definition_header)


State 27

   22 interface_defn_header: SYMBOL INTERFACE .

    $default  reduce using rule 22 (interface_defn_header)


State 28

  233 instantiation: SYMBOL SYMBOL . parameters
  234              | SYMBOL SYMBOL . property_block parameters
